...
                coroutineScope.launch {
                    drawerState.close()
                }
                if (nav == "Logout") {
                    isLoggedIn = false
                    username = ""
                    selectedNav = "Login"
                }
            }, isLoggedIn = isLoggedIn
        )
    }) {
        // Scaffold and your app's content go here
        Scaffold(topBar = {
...
                        userId = userId
                    )

                    "Doctor Availabilities" -> DoctorAvailabilitiesScreen(viewModel = doctorAvailabilitiesViewModel)


                    "Publish Duty Vacancy" -> if (isLoggedIn) {
                        // Ensure only logged in users can access the publish screen
                        DutyVacancyPublishScreen(viewModel = dutyVacanciesViewModel,
                            onPublishSuccess = {
                                // Handle what happens after a successful publish
                                // For example, you could navigate back to the Duty Vacancies list
                                selectedNav = "Duty Vacancies"
...


    Column(modifier = Modifier.padding(PaddingValues(16.dp))) {
        OutlinedTextField(
            value = username,
            onValueChange = { username = it },
            label = { Text("Username") },
            singleLine = true,
            keyboardOptions = KeyboardOptions.Default.copy(imeAction = ImeAction.Next)
        )
        OutlinedTextField(
            value = password,
            onValueChange = { password = it },
            label = { Text("Password") },
            singleLine = true,
            visualTransformation = PasswordVisualTransformation(),
            keyboardOptions = KeyboardOptions.Default.copy(imeAction = ImeAction.Done),
            keyboardActions = KeyboardActions(onDone = { /* Handle login */ })
        )
        Button(
...

            val endDateTime = parseFormat.parse(dutyVacancy.endDateTime)
            val formattedEndDateTime = displayFormat.format(endDateTime)
            Text("End DateTime: $formattedEndDateTime")
    
            if (dutyVacancy.priceFrom != null && dutyVacancy.priceFrom != BigDecimal.ZERO) {
                Text("Price From: ${dutyVacancy.priceFrom}", style = MaterialTheme.typography.bodyLarge)
            }
            if (dutyVacancy.priceTo != null && dutyVacancy.priceTo != BigDecimal.ZERO) {
                Text("Price To: ${dutyVacancy.priceTo}", style = MaterialTheme.typography.bodyLarge)
            }
            if (dutyVacancy.currency != null && dutyVacancy.currency != Currency.PLN) {
                Text("Currency: ${dutyVacancy.currency}", style = MaterialTheme.typography.bodyLarge)
...
                                Text("Waiting")
                            }

                            // Add a Remove button if the user is the hospital owner of the slot
                            if (userId == dutyVacancy.hospitalId._id) {
                                Button(onClick = onRemoveSlot) {
                                    Text("Remove")
                                }
                            }
                        }

                        DutySlotStatus.PENDING -> Button(onClick = onGiveConsent) { Text("Consent") }
                        DutySlotStatus.FILLED -> Button(
...
                        currency,
                        onPublishSuccess
                    )
                }
            }, modifier = Modifier.padding(PaddingValues(all = 8.dp))
        ) {
            Text("Publish")
        }
    }
}

@Composable
fun DateTimeInputField(context: Context, label: String, date: MutableState<String>, time: MutableState<String>) {
...
    ) {
        ExposedDropdownMenuBox(
            expanded = expanded,
            onExpandedChange = {
                expanded = !expanded
            },
            modifier = Modifier.testTag("Specialty Dropdown Menu"),
        ) {
            OutlinedTextField(
                value = selectedText,
                onValueChange = {},
                readOnly = true,
                trailingIcon = { ExposedDropdownMenuDefaults.TrailingIcon(expanded = expanded) },
...
